src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');

* {
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
    list-style: none;
    margin: 0;
    outline: 0;
    padding: 0;
    scroll-behavior: smooth;
    text-decoration: none;
}

:root {
    --background-white: #ffffff;
    --box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
    --color-blue: #2783ff;
    --default-radius: 10px;
    --font-large: 2rem;
    --font-normal: 1.5rem;
    --font-small: 1rem;
    --font-text: 1.7rem;
    --image-radius: 20px;
    --input-backgroud: #f9fafb;
    --input-border: 1px solid #e2e2e2;
    --main-color: #232325;
    --section-text-color: #555555;
    --transition: all 0.5s;
}

/* HTML */

body {
    background-color: var(--background-white);
}

html {
    font-size: 62.5%;
}

::-webkit-scrollbar {
    display: none;
}

a,
a:hover,
a:focus,
a:active {
    color: inherit;
    display: block;
    font-size: var(--font-normal);
    padding: 0.5rem 1rem;
    text-decoration: none;
    transition: var(--transition);
}

a:hover {
    color: var(--color-blue);
}

a:focus {
    outline: 1px solid var(--color-blue);
}

button {
    border-radius: var(--default-radius);
    cursor: pointer;
}

h1,
h2,
h3,
h5,
h6 {
    font-weight: 400;
}

h1 {
    color: var(--color-blue);
    font-size: 5rem;
}

h2,
h4 {
    color: var(--section-text-color);
    font-size: 1.5rem;
}

h3,
h4 {
    font-size: 3rem;
}

h3,
header span {
    color: var(--main-color);
}

h3 {
    padding-bottom: 0.3rem;
}

p {
    font-size: var(--font-text);
}

section {
    color: var(--section-text-color);
    margin: 16rem 0;
}

footer p {
    color: var(--main-color);
    font-size: var(--font-small);
    padding: 8rem 0 2.2rem 0;
    text-align: center;
}

form > * {
    background: var(--input-backgroud);
    border-radius: var(--default-radius);
    border: var(--input-border);
    color: var(--section-text-color);
    font-size: var(--font-normal);
    margin-bottom: 1rem;
    padding: 1rem;
    transition: var(--transition);
    width: 80%;
}

textarea {
    height: 100px;
    resize: none;
}

img {
    display: block;
    object-fit: cover;
}

.skip-link {
    position: fixed;
    top: 5px;
    text-align: center;
    left: 50%;
    translate: -50% -200%;
    background-color: var(--main-color);
    padding: 1rem;
}

.skip-link:focus {
    transform: translateY(200%);
    color: var(--background-white);
}

@media (max-width: 1024px) {
    h1 {
        font-size: 4rem;
    }
    section {
        margin-top: 10rem;
    }
    textarea,
    input {
        width: 100%;
    }
}

@media (max-width: 460px) {
    section {
        margin-top: 8rem !important;
    }
    h1 {
        font-size: 3rem;
    }
}

